--- a/src/Animation/animation.css
+++ b/src/Animation/animation.css
@@ -9,3 +9,14 @@
   opacity: 1;
   transform: translateY(0);
 }
+
+
+
+@keyframes blink {
+  0%, 50%, 100% { opacity: 1; }
+  25%, 75% { opacity: 0; }
+}
+
+.blink {
+  animation: blink 1.3s infinite;
+}
